V2048: Vari Fix su tubazioni e componenti

--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P880.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P880.xaml
@@ -61,7 +61,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="110" StatusComponent="868-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="536" Canvas.Top="148" VisibilityComponent="879-21-CV1" VisibilitySignal="LS2">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="110" StatusComponent="872-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="536" Canvas.Top="148">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -81,7 +81,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="330" StatusComponent="868-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="879-21-CV1" VisibilitySignal="LS2" Canvas.Left="266" Canvas.Top="98" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="330" StatusComponent="872-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="266" Canvas.Top="98" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="91" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" Color="Air" Canvas.Left="480" Canvas.Top="718" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="82" RenderTransformOrigin="0.5,0.5" StatusComponent="896-01-MA1" PipeHeight="Medium" Canvas.Left="548" Canvas.Top="652" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
