--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P810.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P810.xaml
@@ -67,7 +67,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="184" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="297" Canvas.Top="556" InverseStatus="True" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="184" RenderTransformOrigin="0.5,0.5" PipeHeight="Medium" Canvas.Left="297" Canvas.Top="556" StatusComponent="578-01-MA1" VisibilityComponent="808-21-CV1" VisibilitySignal="LS2" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
