--- a/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P997.xaml
+++ b/Prevu.Synoptics.V2048-ReCiclar_CMF/Pages/P997.xaml
@@ -9,7 +9,7 @@
              x:Class="Prevu.Synoptics.P997" mc:Ignorable="d"
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas>
-        <Labels:Pipe Width="106" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1" Canvas.Left="1056" Canvas.Top="312" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="106" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="900-71-ECS2" Canvas.Left="1056" Canvas.Top="312" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="82" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" PipeHeight="Medium" Canvas.Left="515" Canvas.Top="355">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
