--- a/Prevu.Synoptics.V4228-RES/Pages/P330.xaml
+++ b/Prevu.Synoptics.V4228-RES/Pages/P330.xaml
@@ -9,8 +9,8 @@
              x:Class="Prevu.Synoptics.P330" mc:Ignorable="d" 
              Height="850" Width="1550" d:Background="{DynamicResource MaterialDesignPaper}">
   <Canvas>
-    <Labels:Pipe Width="165" StatusComponent="324-21-CV1" PipeHeight="Medium"  Canvas.Left="848" Canvas.Top="194" VisibilityComponent="324-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="164" StatusComponent="234-01-MA1" PipeHeight="Medium"  Canvas.Left="133" Canvas.Top="295" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" >
+    <Labels:Pipe Width="165" StatusComponent="324-21-CV1" PipeHeight="Medium"  Canvas.Left="848" Canvas.Top="214" VisibilityComponent="324-21-CV1" VisibilitySignal="LS1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="164" StatusComponent="234-01-MA1" PipeHeight="Medium"  Canvas.Left="139" Canvas.Top="271" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -20,8 +20,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="82" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="1308" Canvas.Top="723" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="114" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="1256" Canvas.Top="670" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+    <Labels:Pipe Width="82" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="1308" Canvas.Top="693" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="114" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="1256" Canvas.Top="640" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -31,7 +31,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="156" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="1069" Canvas.Top="340" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="156" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="1069" Canvas.Top="359" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -41,11 +41,11 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="162" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="678" Canvas.Top="264" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="553" StatusComponent="331-01-MA1" PipeHeight="Medium" Canvas.Left="837" Canvas.Top="742" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="107" StatusComponent="234-01-MA1" PipeHeight="Medium"  Canvas.Left="112" Canvas.Top="218" HorizontalAlignment="Left" VerticalAlignment="Center" />
-    <Labels:Pipe Width="71" StatusComponent="322-01-MA1" PipeHeight="Medium"  Canvas.Left="488" Canvas.Top="356" HorizontalAlignment="Left" VerticalAlignment="Center" />
-    <Labels:Pipe Width="294" StatusComponent="322-01-MA1" PipeHeight="Medium"  Canvas.Left="408" Canvas.Top="214" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" >
+    <Labels:Pipe Width="162" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="678" Canvas.Top="284" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="553" StatusComponent="331-01-MA1" PipeHeight="Medium" Canvas.Left="837" Canvas.Top="712" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="107" StatusComponent="234-01-MA1" PipeHeight="Medium"  Canvas.Left="118" Canvas.Top="194" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:Pipe Width="71" StatusComponent="322-01-MA1" PipeHeight="Medium"  Canvas.Left="488" Canvas.Top="332" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:Pipe Width="250" StatusComponent="322-01-MA1" PipeHeight="Medium"  Canvas.Left="430" Canvas.Top="212" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" >
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -55,8 +55,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="503" StatusComponent="322-01-MA1" PipeHeight="Medium"  Canvas.Left="550" Canvas.Top="72" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="72" StatusComponent="322-01-MA1" PipeHeight="Medium"  RenderTransformOrigin="0.5,0.5" Canvas.Left="1015" Canvas.Top="103" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="503" StatusComponent="322-01-MA1" PipeHeight="Medium"  Canvas.Left="550" Canvas.Top="92" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="72" StatusComponent="322-01-MA1" PipeHeight="Medium"  RenderTransformOrigin="0.5,0.5" Canvas.Left="1015" Canvas.Top="123" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -66,7 +66,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="356" StatusComponent="324-21-CV1" PipeHeight="Medium"  VisibilityComponent="324-21-CV1" VisibilitySignal="LS1" Canvas.Left="675" Canvas.Top="367" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe RenderTransformOrigin="0.5,0.5" Width="306" StatusComponent="324-21-CV1" PipeHeight="Medium"  VisibilityComponent="324-21-CV1" VisibilitySignal="LS1" Canvas.Left="700" Canvas.Top="362" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -76,7 +76,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="290" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="599" Canvas.Top="408" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Labels:Pipe Width="290" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="603" Canvas.Top="426" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -86,8 +86,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="166" StatusComponent="324-21-CV1" PipeHeight="Medium"  Canvas.Left="1090" Canvas.Top="194" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2"/>
-    <Labels:Pipe Width="242" StatusComponent="324-21-CV1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  Canvas.Left="1130" Canvas.Top="310" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2">
+    <Labels:Pipe Width="166" StatusComponent="324-21-CV1" PipeHeight="Medium"  Canvas.Left="1090" Canvas.Top="214" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2"/>
+    <Labels:Pipe Width="192" StatusComponent="324-21-CV1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5"  Canvas.Left="1155" Canvas.Top="305" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="324-21-CV1" VisibilitySignal="LS2">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -97,27 +97,27 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="80" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="1238" Canvas.Top="618" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Width="283" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="866" Canvas.Top="264" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:Pipe Width="71" StatusComponent="320-01-MA1" PipeHeight="Medium"  Canvas.Left="320" Canvas.Top="356" HorizontalAlignment="Left" VerticalAlignment="Center" />
-    <Machines:V01_SLX_MixingSiloScrew Canvas.Left="118" Canvas.Top="286" Height="305" Width="217" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="320-41-LT1" TrendName="LEVEL" Color="WetMaterial" />
-    <Machines:Radar HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="52" Canvas.Left="266" Canvas.Top="273"/>
-    <Rectangle Height="102" Stroke="White" StrokeThickness="2" Width="118" RadiusX="15" RadiusY="15" Canvas.Left="949" Canvas.Top="520" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:V01_STR_BatchReactor Canvas.Left="728" Canvas.Top="487" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="330-41-LT1" TrendName="LEVEL" Height="300" Width="137" Color="WetMaterial" />
-    <Machines:V01_STR_BatchReactor Canvas.Left="1129" Canvas.Top="363" TrendName="LEVEL" ComponentName="335-41-LT1" Height="300" Width="137" HorizontalAlignment="Left" VerticalAlignment="Center" Color="WetMaterial" />
-    <Machines:V01_DV_GrinderDiverter Canvas.Left="995" Canvas.Top="127" Height="106" Width="115" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="135"  Canvas.Left="381" Canvas.Top="350" HorizontalAlignment="Left" VerticalAlignment="Center" />
-    <Labels:DetailsLabel ComponentName="330-VIEW" DetailsPageName="D330" Canvas.Left="771" Canvas.Top="701" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DetailsLabel ComponentName="335-VIEW" DetailsPageName="D335" Canvas.Left="1172" Canvas.Top="577" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:JumpLabel JumpFromLabel="330-WASHING" JumpToLabel="354-HEAT" Canvas.Left="612" Canvas.Top="232" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:JumpLabel JumpFromLabel="330-WASHING" JumpToLabel="350-01-MA1" Canvas.Left="1363" Canvas.Top="703" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="320-41-LT1" JumpToLabel="234-01-MA1" Canvas.Left="89" Canvas.Top="187" />
-    <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="322-01-MA1" Canvas.Left="440" Canvas.Top="286" />
-    <Labels:DeviceLabel ComponentName="330-WASHING" Canvas.Left="963" Canvas.Top="546" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:DeviceLabel ComponentName="330-MIXER" Canvas.Left="752" Canvas.Top="623" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="324-21-CV1" Canvas.Left="1090" Canvas.Top="91" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel ComponentName="335-MIXER" Canvas.Left="1153" Canvas.Top="499" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="320-41-LT1" Canvas.Left="248" Canvas.Top="220"/>
-    <Labels:DeviceLabel ComponentName="320-01-MA1" Canvas.Left="180" Canvas.Top="320" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Width="80" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="1238" Canvas.Top="588" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="283" RenderTransformOrigin="0.5,0.5" Color="Water" StatusComponent="373-01-MA1" Canvas.Left="866" Canvas.Top="284" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="71" StatusComponent="320-01-MA1" PipeHeight="Medium"  Canvas.Left="326" Canvas.Top="332" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Machines:V01_SLX_MixingSiloScrew Canvas.Left="124" Canvas.Top="262" Height="305" Width="217" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="320-41-LT1" TrendName="LEVEL" Color="WetMaterial" />
+    <Machines:Radar HorizontalAlignment="Center" VerticalAlignment="Top" Height="46" Width="52" Canvas.Left="272" Canvas.Top="249"/>
+    <Rectangle Height="102" Stroke="White" StrokeThickness="2" Width="118" RadiusX="15" RadiusY="15" Canvas.Left="949" Canvas.Top="490" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_STR_BatchReactor Canvas.Left="728" Canvas.Top="457" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="330-41-LT1" TrendName="LEVEL" Height="300" Width="137" Color="WetMaterial" />
+    <Machines:V01_STR_BatchReactor Canvas.Left="1129" Canvas.Top="333" TrendName="LEVEL" ComponentName="335-41-LT1" Height="300" Width="137" HorizontalAlignment="Center" VerticalAlignment="Top" Color="WetMaterial" />
+    <Machines:V01_DV_GrinderDiverter Canvas.Left="995" Canvas.Top="147" Height="106" Width="115" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:SCW_ScrewConveyor_straight RenderTransformOrigin="0.5,0.5" Width="135"  Canvas.Left="381" Canvas.Top="326" HorizontalAlignment="Center" VerticalAlignment="Top" />
+    <Labels:DetailsLabel ComponentName="330-VIEW" DetailsPageName="D330" Canvas.Left="771" Canvas.Top="671" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DetailsLabel ComponentName="335-VIEW" DetailsPageName="D335" Canvas.Left="1172" Canvas.Top="547" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:JumpLabel JumpFromLabel="330-WASHING" JumpToLabel="354-HEAT" Canvas.Left="622" Canvas.Top="252" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:JumpLabel JumpFromLabel="330-WASHING" JumpToLabel="350-01-MA1" Canvas.Left="1353" Canvas.Top="673" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:JumpLabel HorizontalAlignment="Center" VerticalAlignment="Top" JumpFromLabel="320-41-LT1" JumpToLabel="234-01-MA1" Canvas.Left="95" Canvas.Top="163" />
+    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="322-01-MA1" Canvas.Left="426" Canvas.Top="262" />
+    <Labels:DeviceLabel ComponentName="330-WASHING" Canvas.Left="963" Canvas.Top="516" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="330-MIXER" Canvas.Left="752" Canvas.Top="593" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="324-21-CV1" Canvas.Left="1090" Canvas.Top="111" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel ComponentName="335-MIXER" Canvas.Left="1153" Canvas.Top="469" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="320-41-LT1" Canvas.Left="254" Canvas.Top="196"/>
+    <Labels:DeviceLabel ComponentName="320-01-MA1" Canvas.Left="186" Canvas.Top="296" HorizontalAlignment="Center" VerticalAlignment="Top"/>
   </Canvas>
 </UserControl>
