--- a/Prevu.Synoptics.V4228-RES/Pages/P460.xaml
+++ b/Prevu.Synoptics.V4228-RES/Pages/P460.xaml
@@ -174,9 +174,8 @@
         </TransformGroup>
       </Misc:DashedLine.RenderTransform>
     </Misc:DashedLine>
-    <TextBlock Width="94" Canvas.Top="55" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="753" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Left" VerticalAlignment="Center"><Run Language="it-it" Text="S710"/></TextBlock>
-    <TextBlock Width="94" Canvas.Top="55" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="633" Height="50" FontSize="36" FontWeight="Bold" Foreground="Black" HorizontalAlignment="Left" VerticalAlignment="Center"><Run Language="it-it" Text="S610"/></TextBlock>
-    <Machines:Waste Height="46" Width="44" Canvas.Left="1301" Canvas.Top="431" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <TextBlock Width="94" Canvas.Top="55" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="753" Height="50" FontSize="36" FontWeight="Bold" Foreground="{DynamicResource MaterialDesignBody}" HorizontalAlignment="Left" VerticalAlignment="Center"><Run Language="it-it" Text="S710"/></TextBlock>
+    <TextBlock Width="94" Canvas.Top="55" TextWrapping="Wrap" TextAlignment="Center" Canvas.Left="633" Height="50" FontSize="36" FontWeight="Bold" Foreground="{DynamicResource MaterialDesignBody}" HorizontalAlignment="Left" VerticalAlignment="Center"><Run Language="it-it" Text="S610"/></TextBlock>
     <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="423" Canvas.Left="528" Canvas.Top="262" HorizontalAlignment="Left" VerticalAlignment="Center">
       <Misc:DashedLine.RenderTransform>
         <TransformGroup>
@@ -187,6 +186,7 @@
         </TransformGroup>
       </Misc:DashedLine.RenderTransform>
     </Misc:DashedLine>
+    <Machines:Waste Height="46" Width="44" Canvas.Left="1301" Canvas.Top="431" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="121" Canvas.Left="739" Canvas.Top="472" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:JumpLabel HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="460-01-MA1" JumpToLabel="455-01-MA1" Canvas.Left="61" Canvas.Top="138"/>
     <Labels:JumpLabel JumpFromLabel="477-01-MA1" JumpToLabel="283-01-MA1" Canvas.Left="744" Canvas.Top="683" HorizontalAlignment="Left" VerticalAlignment="Center"/>
