--- a/Prevu.Synoptics.V4228-RES/Pages/P430.xaml
+++ b/Prevu.Synoptics.V4228-RES/Pages/P430.xaml
@@ -288,6 +288,6 @@
     <Labels:DeviceLabel ComponentName="431-01-MA1" Canvas.Left="615" Canvas.Top="49" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Labels:DeviceLabel ComponentName="455-MATERIAL" Canvas.Left="869" Canvas.Top="140" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Labels:DetailsLabel ComponentName="455-VIEW" DetailsPageName="D455" HideComponentName="True" Canvas.Left="970" Canvas.Top="140" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DisplayLabel Canvas.Left="869" Canvas.Top="96" FontSize="20" HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="455-MATERIAL"/>
+    <Labels:DisplayLabel Canvas.Left="862" Canvas.Top="96" FontSize="20" HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="455-MATERIAL"/>
   </Canvas>
 </UserControl>
