--- a/Prevu.Synoptics.V4228-RES/OverallView.xaml
+++ b/Prevu.Synoptics.V4228-RES/OverallView.xaml
@@ -14,7 +14,7 @@
              d:Background="{DynamicResource MaterialDesignPaper}" >
 
   <Canvas Height="4169" Width="7938">
-    <Labels:Pipe Canvas.Left="2346" Canvas.Top="652" PipeHeight="Medium" Width="790" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" StatusComponent="120-01-MA1">
+    <Labels:Pipe Canvas.Left="2355" Canvas.Top="643" PipeHeight="Medium" Width="772" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" StatusComponent="120-01-MA1">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -24,9 +24,9 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Canvas.Left="2597" Canvas.Top="1042" PipeHeight="Medium" Width="147" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="120-01-MA1"/>
+    <Labels:Pipe Canvas.Left="2597" Canvas.Top="1024" PipeHeight="Medium" Width="147" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="120-01-MA1"/>
     <Labels:Pipe Canvas.Left="2736" Canvas.Top="261" PipeHeight="Medium" Width="74" StatusComponent="120-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Canvas.Left="7269" Canvas.Top="2357" PipeHeight="Medium" Width="892" RenderTransformOrigin="0.5,0.5" StatusComponent="380-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Canvas.Left="7266" Canvas.Top="2354" PipeHeight="Medium" Width="898" RenderTransformOrigin="0.5,0.5" StatusComponent="380-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -36,7 +36,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Canvas.Left="7540" Canvas.Top="1912" PipeHeight="Medium" Width="180" StatusComponent="380-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Canvas.Left="7504" Canvas.Top="1906" PipeHeight="Medium" Width="216" StatusComponent="380-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Canvas.Left="1067" Canvas.Top="2798" PipeHeight="Medium" Width="6653" StatusComponent="380-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Canvas.Left="999" Canvas.Top="2866" PipeHeight="Medium" Width="146" RenderTransformOrigin="0.5,0.5" StatusComponent="380-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
@@ -267,9 +267,9 @@
     <local:P100 CacheMode="BitmapCache" Canvas.Left="1144" Canvas.Top="516" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
     <local:P140 CacheMode="BitmapCache" Canvas.Left="2773" Canvas.Top="164" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
     <local:P230 CacheMode="BitmapCache" Canvas.Left="3813" Canvas.Top="579" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-    <local:P288 CacheMode="BitmapCache" Canvas.Left="2529" Canvas.Top="1801" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-    <local:P330 CacheMode="BitmapCache" Canvas.Left="4795" Canvas.Top="973" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-    <local:P350 CacheMode="BitmapCache" Canvas.Left="6033" Canvas.Top="1623" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+    <local:P288 CacheMode="BitmapCache" Canvas.Left="2529" Canvas.Top="1801" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <local:P330 CacheMode="BitmapCache" Canvas.Left="4789" Canvas.Top="997" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <local:P350 CacheMode="BitmapCache" Canvas.Left="6027" Canvas.Top="1617" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <local:P430 CacheMode="BitmapCache" Canvas.Left="978" Canvas.Top="2828" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
     <local:P460 CacheMode="BitmapCache" Canvas.Left="2306" Canvas.Top="3102" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
     <local:P810 CacheMode="BitmapCache" Canvas.Left="4058" Canvas.Top="2970" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
