--- a/Prevu.Synoptics.V4228-RES/Pages/P880.xaml
+++ b/Prevu.Synoptics.V4228-RES/Pages/P880.xaml
@@ -31,7 +31,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="110" StatusComponent="868-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="384" Canvas.Top="120" VisibilityComponent="879-21-CV1" VisibilitySignal="LS2">
+    <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="110" StatusComponent="868-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Canvas.Left="384" Canvas.Top="120" VisibilityComponent="" VisibilitySignal="">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -51,7 +51,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Width="330" StatusComponent="868-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="879-21-CV1" VisibilitySignal="LS2" Canvas.Left="114" Canvas.Top="70" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Width="330" StatusComponent="868-01-MA1" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" VisibilityComponent="" VisibilitySignal="" Canvas.Left="114" Canvas.Top="70" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="91" RenderTransformOrigin="0.5,0.5" StatusComponent="888-01-MA1"  Color="Air" Canvas.Left="369" Canvas.Top="689" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Width="82" RenderTransformOrigin="0.5,0.5" StatusComponent="886-01-MA1" PipeHeight="Medium" Canvas.Left="437" Canvas.Top="624" HorizontalAlignment="Center" VerticalAlignment="Top" >
       <Labels:Pipe.RenderTransform>
