--- a/Prevu.Synoptics.V4228-RES/PlantView.xaml
+++ b/Prevu.Synoptics.V4228-RES/PlantView.xaml
@@ -13,7 +13,7 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}" >
   <Canvas Height="840" Width="1890" >
-    <Labels:Pipe Canvas.Left="203" Canvas.Top="54" Width="64" PipeHeight="Medium" StatusComponent="018-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Canvas.Left="203" Canvas.Top="54" Width="66" PipeHeight="Medium" StatusComponent="018-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Canvas.Left="1069" Canvas.Top="138" Width="80" PipeHeight="Medium" StatusComponent="150-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Canvas.Left="404" Canvas.Top="349" Width="94" PipeHeight="Medium" StatusComponent="030-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Canvas.Left="1056" Canvas.Top="125" Width="36" PipeHeight="Medium" StatusComponent="150-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
@@ -36,8 +36,8 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Canvas.Left="725" Canvas.Top="285" Width="78" PipeHeight="Medium" StatusComponent="120-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Canvas.Left="794" Canvas.Top="81" Width="157" PipeHeight="Medium" StatusComponent="120-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:Pipe Canvas.Left="754" Canvas.Top="286" Width="49" PipeHeight="Medium" StatusComponent="120-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Canvas.Left="793" Canvas.Top="81" Width="55" PipeHeight="Medium" StatusComponent="120-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Canvas.Left="1401" Canvas.Top="96" Width="186" PipeHeight="Medium" StatusComponent="170-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="170-21-CV1" VisibilitySignal="LS1"/>
     <Labels:Pipe Canvas.Left="1556" Canvas.Top="119" Width="54" PipeHeight="Medium" StatusComponent="170-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="170-21-CV1" VisibilitySignal="LS1">
       <Labels:Pipe.RenderTransform>
@@ -80,7 +80,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Canvas.Left="204" Canvas.Top="109" Width="118" PipeHeight="Medium" StatusComponent="018-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+    <Labels:Pipe Canvas.Left="245" Canvas.Top="68"Canvas.Top="68" Width="38" PipeHeight="Medium" StatusComponent="018-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -90,7 +90,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Canvas.Left="209" Canvas.Top="252" Width="104" PipeHeight="Medium" StatusComponent="024-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
+    <Labels:Pipe Canvas.Left="214" Canvas.Top="250" Width="100" PipeHeight="Medium" StatusComponent="024-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -110,7 +110,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Canvas.Left="1261" Canvas.Top="499" Width="50" StatusComponent="431-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" PipeHeight="Medium"/>
+    <Labels:Pipe Canvas.Left="1251" Canvas.Top="499" Width="60" StatusComponent="431-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" PipeHeight="Medium"/>
     <Labels:Pipe Canvas.Left="1230" Canvas.Top="573" Width="152" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center" PipeHeight="Medium">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
@@ -198,7 +198,7 @@
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
     <Labels:Pipe Canvas.Left="528" Canvas.Top="586" Width="108" PipeHeight="Medium" StatusComponent="868-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:Pipe Canvas.Left="557" Canvas.Top="317" Width="176" PipeHeight="Medium" StatusComponent="100-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+    <Labels:Pipe Canvas.Left="557" Canvas.Top="321" Width="176" PipeHeight="Medium" StatusComponent="100-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Labels:Pipe.RenderTransform>
         <TransformGroup>
           <ScaleTransform/>
@@ -208,7 +208,7 @@
         </TransformGroup>
       </Labels:Pipe.RenderTransform>
     </Labels:Pipe>
-    <Labels:Pipe Canvas.Left="609" Canvas.Top="401" Width="41" PipeHeight="Medium" StatusComponent="100-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:Pipe Canvas.Left="609" Canvas.Top="404" Width="41" PipeHeight="Medium" StatusComponent="100-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:Pipe Canvas.Left="998" Canvas.Top="111" Width="81" PipeHeight="Medium" StatusComponent="150-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Canvas.Left="1488" Canvas.Top="490" Width="40" PipeHeight="Medium" StatusComponent="330-WASHING" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:Pipe Canvas.Left="1518" Canvas.Top="677" Width="35" PipeHeight="Medium" StatusComponent="330-WASHING" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -285,8 +285,8 @@
     </Machines:QX_LongElectricalCabinet>
     <FlakesSorting:FKS_FlakesSorter_wRecovery Canvas.Left="504" Canvas.Top="670" Height="123" Width="124" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_WCE_Centrifuge Canvas.Left="1575" Canvas.Top="216" Height="112" Width="132" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:V01_SB_Sfaldaballe Canvas.Left="213" Canvas.Top="85" Height="125" Width="143" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Machines:V01_VRR_DryTrommel Canvas.Left="240" Canvas.Top="297" Height="104" Width="184" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Machines:V01_SB_Sfaldaballe Canvas.Left="192" Canvas.Top="85" Height="125" Width="143" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_VRR_DryTrommel Canvas.Left="241" Canvas.Top="297" Height="104" Width="184" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_WCE_Centrifuge Canvas.Left="478" Canvas.Top="285" Height="130" Width="149" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_SAB_DiskSeparator Canvas.Left="590" Canvas.Top="165" HorizontalAlignment="Center" VerticalAlignment="Top" Height="140" Width="178"/>
     <Machines:V01_NT_Belt_BottleSorter Canvas.Left="816" Canvas.Top="40" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -325,7 +325,7 @@
     </Machines:V01_DRY_FluidBedDryer>
     <Machines:V01_NT_Belt_BottleSorter Canvas.Left="949" Canvas.Top="261" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_Waste Canvas.Left="1116" Canvas.Top="376" Height="34" Width="36" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Machines:V01_WCE_Centrifuge Canvas.Left="1152" Canvas.Top="491" Height="100" Width="115" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+    <Machines:V01_WCE_Centrifuge Canvas.Left="1152" Canvas.Top="495" Height="100" Width="115" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
       <Machines:V01_WCE_Centrifuge.RenderTransform>
         <TransformGroup>
           <ScaleTransform ScaleX="-1"/>
@@ -335,7 +335,7 @@
         </TransformGroup>
       </Machines:V01_WCE_Centrifuge.RenderTransform>
     </Machines:V01_WCE_Centrifuge>
-    <Machines:V01_SLX_MixingSiloScrew Canvas.Left="665" Canvas.Top="655" Height="164" Width="142" ComponentName="320-41-LT1" TrendName="LEVEL" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Machines:V01_SLX_MixingSiloScrew Canvas.Left="665" Canvas.Top="651" Height="164" Width="142" ComponentName="320-41-LT1" TrendName="LEVEL" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Machines:V01_DCT_Decanter Canvas.Left="1365" Canvas.Top="250" Height="186" Width="102" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:V01_RTF_Microfilter Canvas.Left="1429" Canvas.Top="336" Height="96" Width="88" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Separation:SA_Elutriator  Width="52" Canvas.Left="593" Canvas.Top="475" Height="134" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -343,17 +343,17 @@
     <Machines:QX_HMI Height="66" Width="56" Canvas.Left="1252" Canvas.Top="370" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Machines:QX_HMI Height="66" Width="56" Canvas.Left="34" Canvas.Top="765" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:ValueLabel Canvas.Left="1686" Canvas.Top="553" TrendName="LEVEL" ComponentName="320-41-LT1" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:GroupLabel GroupName="020" Canvas.Left="340" Canvas.Top="223" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:GroupLabel GroupName="100" Canvas.Left="666" Canvas.Top="338" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:GroupLabel GroupName="230" Canvas.Left="1661" Canvas.Top="161" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:GroupLabel GroupName="350" Canvas.Left="1343" Canvas.Top="537" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:GroupLabel GroupName="020" Canvas.Left="192" Canvas.Top="217" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:GroupLabel GroupName="100" Canvas.Left="654" Canvas.Top="308" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:GroupLabel GroupName="230" Canvas.Left="1638" Canvas.Top="168" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:GroupLabel GroupName="350" Canvas.Left="1336" Canvas.Top="496" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Labels:GroupLabel GroupName="460" Canvas.Left="1087" Canvas.Top="715" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:GroupLabel GroupName="810" Canvas.Left="689" Canvas.Top="596" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:GroupLabel GroupName="810" Canvas.Left="703" Canvas.Top="598" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:GroupLabel GroupName="880" Canvas.Left="533" Canvas.Top="634" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:GroupLabel GroupName="140" Canvas.Left="986" Canvas.Top="157" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:GroupLabel GroupName="330" Canvas.Left="1617" Canvas.Top="665" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:GroupLabel GroupName="430" Canvas.Left="1319" Canvas.Top="682" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:GroupLabel GroupName="530" Canvas.Left="849" Canvas.Top="574" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:GroupLabel GroupName="330" Canvas.Left="1626" Canvas.Top="670" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:GroupLabel GroupName="430" Canvas.Left="1324" Canvas.Top="684" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    <Labels:GroupLabel GroupName="530" Canvas.Left="861" Canvas.Top="596" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Labels:DeviceLabel x:Name="ESTOP" ComponentName="ESTOP-AREA-01" Canvas.Left="122" Canvas.Top="651" HorizontalAlignment="Center" VerticalAlignment="Center"/>
     <Labels:DeviceLabel x:Name="Q21" ComponentName="Q21" Canvas.Left="18" Canvas.Top="535" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel x:Name="Q01" ComponentName="Q01" Canvas.Left="122" Canvas.Top="712" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -362,13 +362,13 @@
     <Labels:DeviceLabel x:Name="Q41" ComponentName="Q41" Canvas.Left="1794" Canvas.Top="107" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     <Labels:DeviceLabel x:Name="Q61" ComponentName="Q71" Canvas.Left="386" Canvas.Top="486" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel x:Name="S210" ComponentName="S210" Canvas.Left="557" Canvas.Top="56" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel x:Name="S410" ComponentName="S410" Canvas.Left="1356" Canvas.Top="21" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-    <Labels:DeviceLabel x:Name="S510" ComponentName="S510" Canvas.Left="1449" Canvas.Top="732" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-    <Labels:DeviceLabel x:Name="S610" ComponentName="S710" Canvas.Left="746" Canvas.Top="516" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:DeviceLabel x:Name="S410" ComponentName="S410" Canvas.Left="1497" Canvas.Top="32" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel x:Name="S510" ComponentName="S510" Canvas.Left="1463" Canvas.Top="748" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+    <Labels:DeviceLabel x:Name="S610" ComponentName="S710" Canvas.Left="776" Canvas.Top="517" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Labels:ValueLabel Canvas.Left="719" Canvas.Top="696" TrendName="WEIGHT" ComponentName="810-41-WT1" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel x:Name="HMI_01_Copia" ComponentName="HMI-02" Canvas.Left="1234" Canvas.Top="319" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Labels:DeviceLabel x:Name="HMI_01_Copia1" ComponentName="HMI-03" Canvas.Left="18" Canvas.Top="712" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    <Labels:GroupLabel GroupName="288" Canvas.Left="1451" Canvas.Top="294" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+    <Labels:GroupLabel GroupName="288" Canvas.Left="1462" Canvas.Top="281" HorizontalAlignment="Left" VerticalAlignment="Top"/>
     <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="1322" Canvas.Left="12" Canvas.Top="10" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="1322" Canvas.Left="12" Canvas.Top="445" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     <Misc:DashedLine RenderTransformOrigin="0.5,0.5" Height="4" Width="436" Canvas.Left="1115" Canvas.Top="228" HorizontalAlignment="Left" VerticalAlignment="Center">
