V4978: Added Missing level componets on P480,P490

--- a/Prevu.Synoptics.V4978_CEDO/Pages/P490.xaml
+++ b/Prevu.Synoptics.V4978_CEDO/Pages/P490.xaml
@@ -253,5 +253,7 @@
         <Labels:DeviceLabel ComponentName="494-21-CV1" Canvas.Left="1073" Canvas.Top="365" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Labels:DeviceLabel ComponentName="496-61-LS1" Canvas.Left="1271" Canvas.Top="644" HorizontalAlignment="Left" VerticalAlignment="Top" />
         <Labels:DeviceLabel ComponentName="496-71-ECS2" Canvas.Left="1400" Canvas.Top="613" HorizontalAlignment="Left" VerticalAlignment="Top" />
+        <Rectangle Height="2" Stroke="Black" Width="52" RenderTransformOrigin="0.5,0.5" Canvas.Left="350" Canvas.Top="714" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:DeviceLabel ComponentName="497-61-LS1" Canvas.Left="268" Canvas.Top="690" HorizontalAlignment="Center" VerticalAlignment="Center" />
     </Canvas>
 </UserControl>
